--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -1,6 +1,6 @@
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Anal\'yza}\label{ch:analyza}
+\chapter{Anal\'yza problematiky}\label{ch:analyza}
 
 Tato kapitola analyzuje problematiku byznysov\'ych pravidel v informačn\'{\i}ch systémech
 a detailně popisuje architekturu orientovanou na služby, včetně jej\'{\i}ho historického
