--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -1,6 +1,6 @@
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Rešerše}\label{ch:reserse}
+\chapter{Rešerše existujících řešení}\label{ch:reserse}
 
 Tato kapitola se věnuje rešerši existujících řešení
 a výzkumu relevantnímu k tématu této práce. Díky tomu bude umožněno
