--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -1,6 +1,6 @@
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Návrh}\label{ch:navrh}
+\chapter{Návrh frameworku}\label{ch:navrh}
 
 V této kapitole je diskutován návrh frameworku pro centrální správu
 a automatickou integraci business pravidel vyhovující požadavkům identifikovaným
