--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -3,7 +3,7 @@
 
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Implementace prototypů knihoven}\label{ch:implementace}
+\chapter{Implementace prototypů knihoven frameworku}\label{ch:implementace}
 
 %\goal{Uveden\'{\i} kapitoly a nast\'{\i}něn\'{\i} obsahu}
 Součást\'{\i} zadán\'{\i} této práce je implementace prototypů
