--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -3,7 +3,7 @@
 
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Verifikace a validace}\label{ch:verifikace}
+\chapter{Verifikace a validace frameworku}\label{ch:verifikace}
 
 Tato kapitola popisuje, jak\'y způsobem byla provedena
 verifikace naprogramovan\'ych knihoven pomoc\'{\i}
