abstract styling + keywords

--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -144,39 +144,51 @@ dosažení vynikajících výsledků v průběhu magisterského studia.
 \abstractpage
 
 %Translation of Czech abstract into English.
-Service oriented architecture decomposes information systems into small
+\noindent{Service oriented architecture decomposes information systems into small
 standalone services, lowering their complexity through loose coupling
 and component reuse. Business rules often cross-cut multiple services and
 they must be addressed consistently. Current approaches are limited when it
 comes to dealing with such tangled concerns, requiring manual restatement and
-code duplication, leading to higher development and maintenance costs.
+code duplication, leading to higher development and maintenance costs.}
 
-This thesis analyses the problem of business rules in service oriented
+\vspace{\baselineskip}
+
+\noindent{This thesis analyses the problem of business rules in service oriented
 architecture and proposes a novel approach that uses aspect-oriented
 programming to enable central administration and automatic integration
 of business rules in such systems. Moreover, the thesis provides a case study
 showing reduction of manual business rule duplication within an example system
-utilizing the proposed approach.
+utilizing the proposed approach.}
+
+\vspace{\baselineskip}
+
+\noindent{\textbf{Keywords:} Service oriented architecture, business rules, aspect-oriented programming, separation of concerns}
 
 % Prace v cestine musi krome abstraktu v anglictine obsahovat i
 % abstrakt v cestine.
-\vglue20mm
+\vglue30mm
 
-\noindent{\Huge \textbf{Abstrakt}}
-\vskip 2.75\baselineskip
+\noindent{\textbf{Abstrakt}}
+\vspace{\baselineskip}
 
-Architektura orientovaná na služby usnadňuje vývoj komplexních informačních
+\noindent{Architektura orientovaná na služby usnadňuje vývoj komplexních informačních
 systému díky členění jeho funkcionality do samostatných služeb. Díky tomu lze
 snáze oddělit zodpovědnost a zvýšit znovupoužitelnost komponent systému.
 Byznysová pravidla ale často zasahují do více služeb najednou a vyžadují
 konzistentní vykonávání. To při použití současných přístupů vede k manuální
-duplikaci pravidel, která zvyšuje náklady na vývoj a údržbu systémů.
+duplikaci pravidel, která zvyšuje náklady na vývoj a údržbu systémů.}
 
-Tato práce analyzuje problematiku byznysových pravidel v architektuře orientované
+\vspace{\baselineskip}
+
+\noindent{Tato práce analyzuje problematiku byznysových pravidel v architektuře orientované
 na služby a navrhuje inovativní způsob, jakým lze s využitím aspektově orientovaného
 programování usnadnit práci vývojářů a administrátorů pomocí centrální správy a
 automatické integrace těchto pravidel. Součástí práce je případová studie, která
-prokazuje snížení manuální duplikace na ukázkovém systému využívajícím navržený přístup.
+prokazuje snížení manuální duplikace na ukázkovém systému využívajícím navržený přístup.}
+
+\vspace{\baselineskip}
+
+\noindent{\textbf{Klíčová slova:} Architektura orientovaná na služby, byznysová pravidla, aspektově orientované programování, oddělení zodpovědností}
 
 %\noindent
 %Abstrakt práce by měl velmi stručně vystihovat její obsah. Tedy čím se práce zabývá a co je jejím výsledkem/přínosem.
