--- a/k336_thesis_macros.sty
+++ b/k336_thesis_macros.sty
@@ -108,9 +108,9 @@ I declare that I elaborated this thesis on my own and that I mentioned all the i
 \newcommand{\abstractpage}{
 \cleardoublepage
 \noindent
-%{\Huge \textbf{Abstract}}
-%\vspace{8ex}
-\chapter*{Abstract}
+{\textbf{Abstract}}
+\vspace{\baselineskip}
+%\chapter*{Abstract}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
