chapter 6 tables captions fix

--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -174,7 +174,7 @@ přehled je v tabulce~\ref{tbl:use-cases}.
         \textbf{UC13} & Administrátor může mazat uživatele (skladn\'{\i}ky i zákazn\'{\i}ky) \\
         \hline
     \end{tabular*}
-    \caption{Přehled use-cases ukázkového e-commerce systému}
+    \caption{Případy použití ukázkového e-commerce systému}
     \label{tbl:use-cases}
 \end{table}
 
@@ -236,7 +236,7 @@ vid\'{\i}me, na které užitné př\'{\i}pady se pravidlo aplikuje, a jak\'y je 
         \textbf{BR20} & UC12 & Skladn\'{\i}k mus\'{\i} m\'{\i}t emailovou adresu v platném formátu & pre \\
         \hline
     \end{tabular}
-    \caption{Přehled byznysov\'ych pravidel ukázkového e-commerce systému}
+    \caption{Byznysová pravidla ukázkového e-commerce systému}
     \label{tbl:business-rules}
 \end{table}
 
@@ -274,7 +274,7 @@ jsou podle domén děleny i jednotlivé služby systému.
         \textbf{user.validEmail} & - & BR06 \\ \hline
         \hline
     \end{tabular*}
-    \caption{Přehled byznysov\'ych kontextů ukázkového e-commerce systému}
+    \caption{Byznysové kontexty ukázkového e-commerce systému}
     \label{tbl:business-contexts}
 \end{table}
 
@@ -442,7 +442,7 @@ Manuáln\'{\i} duplikace nav\'{\i}c přináš\'{\i} nutnost synchronizovat podob
         \textbf{BR10} & (auth), order, product & \textbf{BR20} & user \\
         \hline
     \end{tabularx}
-    \caption{Přehled využit\'{\i} byznysov\'ych pravidel ve službách ukázkového systému}
+    \caption{Využit\'{\i} byznysov\'ych pravidel ve službách ukázkového systému}
     \label{tbl:duplication}
 \end{table}
 
