--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -156,7 +156,7 @@ floatplacement=t
 
 \subsection{Vlastnosti}
 Aspektově orientované programován\'{\i} (\gls{AOP}) přináš\'{\i} řešen\'{\i}
-v\'yše zmiňovaných problémů. Využívá k tomu \textit{separation of concerns} \textendash\xspace
+v\'yše zmiňovaných problémů. Využívá k tomu \textit{separation of concerns} --
 extrahuje kód zachycující průřezové problémy, tzv. \textit{aspekty}, do jednoho bodu, tzv. (\textit{single focal point}).
 Pomoc\'{\i} procesu zvaného \textit{weaving} je poté tento kód automaticky distribuován.
 Weaving může proběhnout staticky při kompilaci programu nebo dynamicky
@@ -348,7 +348,7 @@ Nižší objem kódu vede ke snížení nákladů na jeho údržbu a vývoj~\cit
 Významnou výhodou MPS, potažmo \gls{LOP}, je nezávislost na cílové platformě.
 Nástroj MPS by umožnil snadné znovupoužití pravidel a jejich transformaci do neomezeného počtu jazyků pro
 využití na mnoha platformách. Podobně jako u \gls{MDA} je však problém v dopředném
-generování \textendash\xspace editor MPS totiž neumožňuje načíst víceúčelový jazyk zpět do \gls{DSL}.
+generování -- editor MPS totiž neumožňuje načíst víceúčelový jazyk zpět do \gls{DSL}.
 
 \section{Síťové architektury}
 
@@ -382,7 +382,7 @@ kdy server může jasně definovat a vynucovat přístupová pravidla.
 
 Hlavní nevýhodu této architektury je vytvoření jednoho centrálního bodu,
 jehož výpadek ochromí funkci celého systému (v angličtině
-\textit{single point of failure}) \textendash\xspace tímto bodem je server.
+\textit{single point of failure}) -- tímto bodem je server.
 Pokud na serveru nastane chyba či výpadek, žádný z klientů není schopen využívat
 jeho služeb.
 
