--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -285,7 +285,7 @@ podobně jako pro jazyk Python princip dekorátoru jako funkce.
 Ukázka je ve zdrojovém kódu~\ref{lst:nodejs-weaving}.
 Funkce \code{register()} obsahuje logiku pro registraci uživatele,
 která může obsahovat např\'{\i}klad uložen\'{\i} entity do databáze a odeslán\'{\i}
-registračn\'{\i}ho e-mailu. Při exportován\'{\i} funkce z Node.js modulu
+registračn\'{\i}ho emailu. Při exportován\'{\i} funkce z Node.js modulu
 využijeme \code{wrapCall()}, která má za úkol dekorovat
 předanou funkci \code{func}, před jej\'{\i}m zavolán\'{\i} vyhodnotit
 preconditions a po zavolán\'{\i} aplikovat post-conditions.
