--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -125,7 +125,7 @@ kontextu. Tento jazyk však bude možno v produkční verzi knihovny nahradit ko
 Pro popis kontextů byl jako kompromis mezi jednoduchost\'{\i} implementace
 a př\'{\i}větivost\'{\i} pro koncového uživatele zvolen univerzáln\'{\i} formát Extensible
 Markup Language (\gls{XML}) doplněný o definici schematu dat
-pomocí \textit{XML Schema Definition} (\gls{XSD}).
+pomocí \textit{XML Schema Definition}.
 D\'{\i}ky formálně definovanému schématu lze popis byznys kontextu
 automaticky validovat a vyvarovat se tak př\'{\i}padn\'ych chyb.
 
@@ -214,7 +214,7 @@ engine pro weaving aspektů.
 %\goal{Proč jdom2 a co to um\'{\i}}
 Knihovna JDOM 2\footnote{http://www.jdom.org/} poskytuje
 kompletn\'{\i} sadu nástroju pro čten\'{\i} a zápis \gls{XML} dokumentů.
-Implementuje specifikaci \textit{Document Object Model} (\gls{DOM})
+Implementuje specifikaci \textit{Document Object Model}
 pomoc\'{\i} které lze automaticky sestavovat a č\'{\i}st \gls{XML} dokumenty.
 
 \section{Knihovna pro platformu Python}
