--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -120,8 +120,7 @@ identifikátoru na textov\'y řetězec.
 Tendence ve světě modern\'{\i}ho JavaScriptu je vytvářet knihovny s co nejmenš\'{\i}m polem působnosti,
 které jdou kombinovat do větš\'{\i}ho celku. Prototyp knihovny pro platformu Node.js byl proto testován pomoc\'{\i}
 kombinace dvou nástrojů. Spouštěn\'{\i} testů obstarává knihovna \textit{Mocha}\footnote{https://mochajs.org/}, zat\'{\i}mco
-o ověřován\'{\i} a zápis testů ve stylu \textit{Behaviour Driven Development} (\gls{BDD})
-se stará knihovna \textit{Chai}\footnote{http://www.chaijs.com/}.
+ověřován\'{\i} a zápis testů ve stylu \textit{Behaviour Driven Development} poskytuje knihovna \textit{Chai}\footnote{http://www.chaijs.com/}.
 
 \lstinputlisting[
 caption={Jednotkový test knihovny pro platformu Node.js s využit\'{\i}m nástroje Mocha a Chai},
@@ -348,7 +347,7 @@ a byla implementována v jazyce Java s použit\'{\i}m frameworku Spring Boot.
 Služba \textit{User service} realizuj\'{\i}c\'{\i} funkcionalitu t\'ykaj\'{\i}c\'{\i} se uživatelsk\'ych účtů byla
 implementována v jazyce JavaScript na platformě Node.js s použit\'{\i}m
 frameworku Express\footnote{https://expressjs.com/}. Ve zdrojovém kódu~\ref{lst:user-service-expressjs}
-je ukázka mapován\'{\i} controllerů na jednotlivé metody \gls{URL} \code{/users}.
+je ukázka mapován\'{\i} controllerů na \gls{URL} \code{/users} a různé metody protokolu \gls{HTTP}.
 
 \lstinputlisting[
 caption={Ukázka využit\'{\i} frameworku Express.js pro účely User service},
