--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -76,7 +76,7 @@ post-conditions do datové vrstvy transformováním jejich podmínek do výrazů
 Implementací a napojením příslušného aspect weaveru na navržený framework by byla pokryta další oblast,
 ve které může docházet k manuální duplikaci byznysových pravidel.
 
-\section{Dalš\'{\i} možnosti uplatněn\'{\i} \gls{AOP} v \gls{SOA}}
+\section{Dalš\'{\i} možnosti uplatněn\'{\i} aspektově orientovaného přístupu v SOA}
 
 Byznysová pravidla nejsou jediným průřezovým problémem, se kterým se systémy stavějící na \gls{SOA} musejí
 vypořádat. Jak bylo popsáno v sekci~\ref{sec:adda}, autoři přístupu \gls{ADDA} identifikují strukturu
