fix abstract heading size

--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -168,7 +168,7 @@ utilizing the proposed approach.}
 % abstrakt v cestine.
 \vglue30mm
 
-\noindent{\textbf{Abstrakt}}
+\noindent{\LARGE \textbf{Abstrakt}}
 \vspace{\baselineskip}
 
 \noindent{Architektura orientovaná na služby usnadňuje vývoj komplexních informačních
