--- a/k336_thesis_macros.sty
+++ b/k336_thesis_macros.sty
@@ -108,7 +108,7 @@ I declare that I elaborated this thesis on my own and that I mentioned all the i
 \newcommand{\abstractpage}{
 \cleardoublepage
 \noindent
-{\textbf{Abstract}}
+{\LARGE \textbf{Abstract}}
 \vspace{\baselineskip}
 %\chapter*{Abstract}
 }
